potential solutions for bridge integration form bugs
Schema now shows on the admin site. Save button hopefully no longer is overlapped

--- a/cdip_admin/website/static/website/style.css
+++ b/cdip_admin/website/static/website/style.css
@@ -163,3 +163,7 @@ ul ul a {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
+
+#id_additional_jsonform {
+	height: auto;
+}
